fix(19): revise plan 05 based on checker feedback
- Replace containsString with strings.Contains in ssh_client.go action
- Add explicit import instruction for errors stdlib in commands.go
- Document why errors.IsNotFound at line 357 is excluded (k8s API errors, different domain)
- Clarify must_haves.truths to specify "for RDS errors"
- Make Task 3 done criteria deterministic (state which path was taken)

--- a/.planning/phases/19-error-handling/19-05-PLAN.md
+++ b/.planning/phases/19-error-handling/19-05-PLAN.md
@@ -14,7 +14,7 @@ gap_closure: true
 must_haves:
   truths:
     - "RDS layer returns sentinel errors for volume not found and resource exhausted conditions"
-    - "Driver layer uses errors.Is() instead of string matching for error classification"
+    - "Driver layer uses errors.Is() for RDS error classification (k8s API error checks unchanged)"
     - "Error chains are preserved so both sentinel checks and detailed messages work"
   artifacts:
     - path: "pkg/rds/commands.go"
@@ -24,7 +24,7 @@ must_haves:
       provides: "Uses ErrResourceExhausted sentinel for space errors"
       contains: "ErrResourceExhausted"
     - path: "pkg/driver/controller.go"
-      provides: "Uses errors.Is() for error classification"
+      provides: "Uses errors.Is() for RDS error classification"
       contains: "errors.Is"
   key_links:
     - from: "pkg/rds/commands.go"
@@ -69,22 +69,23 @@ Output: RDS layer returns sentinel errors, driver layer uses errors.Is() for cla
   <files>pkg/rds/commands.go, pkg/rds/ssh_client.go</files>
   <action>
 Update pkg/rds/commands.go:
-1. Verify import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils" exists (it does at line 13)
-2. In GetVolume() at line 174, replace:
+1. Add import "errors" at top of file (stdlib errors package for errors.Is)
+2. Verify import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils" exists (it does at line 13)
+3. In GetVolume() at line 174, replace:
    - BEFORE: `return nil, fmt.Errorf("volume not found: %s", slot)`
    - AFTER: `return nil, utils.WrapVolumeError(utils.ErrVolumeNotFound, slot, "")`
-3. In GetVolume() at line 184, replace:
+4. In GetVolume() at line 184, replace:
    - BEFORE: `return nil, fmt.Errorf("volume not found: %s", slot)`
    - AFTER: `return nil, utils.WrapVolumeError(utils.ErrVolumeNotFound, slot, "")`
-4. In DeleteVolume() at line 114, keep the string check for now:
+5. In DeleteVolume() at line 114, keep the string check for now:
    - `strings.Contains(err.Error(), "not found")` is checking the error returned from GetVolume
    - Once GetVolume returns ErrVolumeNotFound, change to: `errors.Is(err, utils.ErrVolumeNotFound)`
-   - Add import "errors" at top of file
-5. Line 129 check for "no such item" - keep as-is (this is RouterOS CLI output, not Go error)
+6. Line 129 check for "no such item" - keep as-is (this is RouterOS CLI output, not Go error)
 
 Update pkg/rds/ssh_client.go:
 1. Add import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils"
-2. In runCommandWithRetry() at lines 228-230, wrap non-retryable errors with sentinel:
+2. Add import for "strings" if not present
+3. In runCommandWithRetry() at lines 228-230, wrap non-retryable errors with sentinel:
    - BEFORE (lines 227-230):
      ```go
      // Check if error is retryable
@@ -100,7 +101,7 @@ Update pkg/rds/ssh_client.go:
          klog.V(4).Infof("Non-retryable error: %v", err)
          // Wrap with sentinel if it's a known error type
          errStr := lastErr.Error()
-         if containsString(errStr, "not enough space") {
+         if strings.Contains(errStr, "not enough space") {
              return "", fmt.Errorf("%w: %s", utils.ErrResourceExhausted, errStr)
          }
          return "", lastErr
@@ -125,7 +126,7 @@ RDS package returns sentinel-wrapped errors that can be checked with errors.Is()
 </task>
 
 <task type="auto">
-  <name>Task 2: Driver layer uses errors.Is() for classification</name>
+  <name>Task 2: Driver layer uses errors.Is() for RDS error classification</name>
   <files>pkg/driver/controller.go</files>
   <action>
 Update pkg/driver/controller.go:
@@ -138,7 +139,11 @@ Update pkg/driver/controller.go:
    - After: `if errors.Is(err, utils.ErrResourceExhausted)`
 4. Keep the containsString function for now (may be used elsewhere), but add comment marking it for potential removal
 
-Note: The errors.IsNotFound() calls at lines 357 and in reconciler.go are CORRECT - they check for Kubernetes API NotFound errors, not RDS volume errors. Do NOT change those.
+IMPORTANT - Do NOT modify these error checks (different error domain):
+- Line 357: `errors.IsNotFound()` checks for Kubernetes API NotFound errors (e.g., Secret not found via client-go). This is NOT an RDS volume error - it's a k8s API error from the apierrors package. The k8s error domain uses its own error types and apierrors.IsNotFound() is the correct check.
+- Any errors.IsNotFound() in reconciler.go - same reason, k8s API errors.
+
+This plan only migrates RDS/driver error classification (ErrResourceExhausted, ErrVolumeNotFound). Kubernetes API error handling is already correct and uses the proper k8s apierrors package.
   </action>
   <verify>
 grep -n "errors.Is.*ErrResourceExhausted" pkg/driver/controller.go
@@ -146,7 +151,7 @@ go build ./pkg/driver/...
 go test ./pkg/driver/... -v -run TestCreateVolume -count=1
   </verify>
   <done>
-Driver uses errors.Is() for type-safe error classification instead of string matching
+Driver uses errors.Is() for RDS error classification; k8s API error checks (errors.IsNotFound) unchanged
   </done>
 </task>
 
@@ -193,7 +198,7 @@ go test ./pkg/rds/... -v
 go test ./pkg/... -v -run Sentinel 2>/dev/null || echo "No sentinel tests yet"
   </verify>
   <done>
-Either: Tests verify sentinel errors work with errors.Is(), OR tech debt documented for future test addition
+Determined: If mock infrastructure exists, test added and passing. If mock infrastructure missing, tech debt documented in SUMMARY.md with specific TODO.
   </done>
 </task>
 
@@ -220,10 +225,11 @@ grep -n "containsString.*not enough space" pkg/driver/controller.go | wc -l  # S
 
 <success_criteria>
 1. RDS layer returns sentinel-wrapped errors (ErrVolumeNotFound, ErrResourceExhausted)
-2. Driver layer uses errors.Is() instead of containsString() for error classification
-3. Error chains preserved - both errors.Is() and detailed messages work
-4. All existing tests pass (no regressions)
-5. Build succeeds without errors
+2. Driver layer uses errors.Is() instead of containsString() for RDS error classification
+3. K8s API error checks (errors.IsNotFound) unchanged - different error domain
+4. Error chains preserved - both errors.Is() and detailed messages work
+5. All existing tests pass (no regressions)
+6. Build succeeds without errors
 </success_criteria>
 
 <output>
