fix(20): revise plans based on checker feedback
Address 1 blocker and 2 warnings from plan verification:

Plan 20-01 (blocker: key_links_planned):
- Add mock SSH server tests for Connect/runCommand/runCommandWithRetry
- Task 1 now includes Part B with SSH mock server infrastructure
- Update key_links to reflect actual test coverage
- Add success criteria for connection/command execution coverage

Plan 20-03 (warning: verification_derivation):
- Reframe "Legacy functions tested or deprecated" truth to
  "NVMe connection operations handle fallback paths correctly"
- Now user-observable behavior instead of implementation detail

Plan 20-04 (warning: task_completeness):
- Add TestTestableSSHClientInfrastructure verification test
- Clarify task is infrastructure + basic verification, not mock-only
- Update verify step to run actual test

--- a/.planning/phases/20-test-coverage-expansion/20-03-PLAN.md
+++ b/.planning/phases/20-test-coverage-expansion/20-03-PLAN.md
@@ -13,7 +13,7 @@ must_haves:
     - "ConnectWithRetry retry logic is tested with transient failures"
     - "Context cancellation terminates long-running operations"
     - "Connection failures return appropriate errors"
-    - "Legacy functions are tested or explicitly documented as deprecated"
+    - "NVMe connection operations handle fallback paths correctly when JSON parsing fails"
   artifacts:
     - path: "pkg/nvme/nvme_test.go"
       provides: "Expanded NVMe connection tests"
