--- a/.planning/phases/20-test-coverage-expansion/20-01-PLAN.md
+++ b/.planning/phases/20-test-coverage-expansion/20-01-PLAN.md
@@ -25,8 +25,12 @@ must_haves:
   key_links:
     - from: "pkg/rds/ssh_client_test.go"
       to: "pkg/rds/ssh_client.go"
-      via: "unit tests cover newSSHClient, Connect, runCommand, runCommandWithRetry"
-      pattern: "Test.*SSH|Test.*Retry|Test.*Connect"
+      via: "unit tests cover newSSHClient, Connect, runCommand, runCommandWithRetry via mock SSH server"
+      pattern: "TestSSHClientConnect|TestSSHClientRunCommand|TestSSHClientRunCommandWithRetry"
+    - from: "pkg/rds/ssh_client_test.go"
+      to: "mock SSH server"
+      via: "startMockSSHServer helper creates in-process SSH server for testing"
+      pattern: "startMockSSHServer|mockSSHServer"
 ---
 
 <objective>
@@ -57,10 +61,12 @@ Output: Comprehensive test file pkg/rds/ssh_client_test.go covering connection l
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create SSH client unit tests with mock patterns</name>
+  <name>Task 1: Create SSH client unit tests with mock SSH server</name>
   <files>pkg/rds/ssh_client_test.go</files>
   <action>
 Create comprehensive unit tests for pkg/rds/ssh_client.go covering:
+
+**Part A: Pure function tests (no SSH connection needed)**
 
 1. **newSSHClient tests** (table-driven):
    - Valid config with all fields returns client
@@ -92,16 +98,97 @@ Create comprehensive unit tests for pkg/rds/ssh_client.go covering:
    - Case sensitivity is maintained
    - Edge cases (empty strings, full match)
 
+**Part B: SSH mock server tests for Connect/runCommand/runCommandWithRetry**
+
+Use `gliderlabs/ssh` library (already a transitive dependency via golang.org/x/crypto/ssh) to create an in-process mock SSH server:
+
+5. **TestSSHClientConnect** - Test connection lifecycle:
+```go
+func TestSSHClientConnect(t *testing.T) {
+    // Start mock SSH server that accepts any connection
+    srv := startMockSSHServer(t, func(s ssh.Session) {
+        io.WriteString(s, "connected")
+        s.Exit(0)
+    })
+    defer srv.Close()
+
+    client, err := newSSHClient(ClientConfig{
+        Address:            srv.Host,
+        Port:               srv.Port,
+        User:               "admin",
+        InsecureSkipVerify: true,
+    })
+    require.NoError(t, err)
+
+    err = client.Connect()
+    require.NoError(t, err)
+    assert.True(t, client.IsConnected())
+
+    err = client.Close()
+    require.NoError(t, err)
+    assert.False(t, client.IsConnected())
+}
+```
+
+6. **TestSSHClientRunCommand** - Test command execution:
+```go
+func TestSSHClientRunCommand(t *testing.T) {
+    expectedOutput := "type=file slot=\"pvc-test\""
+    srv := startMockSSHServer(t, func(s ssh.Session) {
+        cmd := s.Command()
+        if strings.Contains(cmd[0], "/disk print") {
+            io.WriteString(s, expectedOutput)
+            s.Exit(0)
+        } else {
+            io.WriteString(s.Stderr(), "unknown command")
+            s.Exit(1)
+        }
+    })
+    defer srv.Close()
+
+    client := createConnectedTestClient(t, srv)
+    output, err := client.runCommand("/disk print")
+    require.NoError(t, err)
+    assert.Contains(t, output, expectedOutput)
+}
+```
+
+7. **TestSSHClientRunCommandWithRetry** - Test retry logic:
+```go
+func TestSSHClientRunCommandWithRetry(t *testing.T) {
+    attemptCount := 0
+    srv := startMockSSHServer(t, func(s ssh.Session) {
+        attemptCount++
+        if attemptCount < 2 {
+            // Simulate transient error
+            s.Exit(1)
+            return
+        }
+        io.WriteString(s, "success")
+        s.Exit(0)
+    })
+    defer srv.Close()
+
+    client := createConnectedTestClient(t, srv)
+    output, err := client.runCommandWithRetry("/disk print", 3)
+    require.NoError(t, err)
+    assert.Equal(t, 2, attemptCount)
+    assert.Contains(t, output, "success")
+}
+```
+
+Create helper functions:
+- `startMockSSHServer(t *testing.T, handler func(ssh.Session)) *mockSSHServer`
+- `createConnectedTestClient(t *testing.T, srv *mockSSHServer) *sshClient`
+
 Use existing test patterns from pkg/rds/commands_test.go:
 - Table-driven tests with t.Run()
-- testify assertions NOT required (use standard testing patterns from existing tests)
+- testify assertions for readability
 - Clear test names describing scenario
-
-Note: Do NOT test Connect(), runCommand(), runCommandWithRetry() directly as they require a real SSH connection. Those will be covered in plan 04 via command execution tests with mocks.
   </action>
   <verify>
 ```bash
-go test -v -run "TestNewSSHClient|TestIsRetryableError|TestParseHostKey|TestContainsString|TestIndexString" ./pkg/rds/...
+go test -v -run "TestNewSSHClient|TestIsRetryableError|TestParseHostKey|TestContainsString|TestIndexString|TestSSHClientConnect|TestSSHClientRunCommand|TestSSHClientRunCommandWithRetry" ./pkg/rds/...
 ```
 All tests pass.
   </verify>
@@ -110,6 +197,9 @@ All tests pass.
 - isRetryableError classifies errors correctly (8+ test cases)
 - parseHostKey handles valid/invalid keys (4+ test cases)
 - Helper functions tested (4+ test cases)
+- Connect/Close/IsConnected lifecycle tested via mock SSH server
+- runCommand tested via mock SSH server with RouterOS-style responses
+- runCommandWithRetry tested with transient failure then success scenario
   </done>
 </task>
 
@@ -177,7 +267,7 @@ Check coverage improvement:
 go test -coverprofile=/tmp/rds-cov.out ./pkg/rds/... && go tool cover -func=/tmp/rds-cov.out | grep -E "(ssh_client|client\.go)"
 ```
 
-Expected: ssh_client.go and client.go coverage > 0% (specific functions like newSSHClient, isRetryableError, parseHostKey should show >80%)
+Expected: ssh_client.go coverage >50% (specific functions like newSSHClient, isRetryableError, parseHostKey, Connect, runCommand, runCommandWithRetry should show >60%). client.go coverage >80%.
 </verification>
 
 <success_criteria>
@@ -187,6 +277,9 @@ Expected: ssh_client.go and client.go coverage > 0% (specific functions like new
 4. Coverage on isRetryableError = 100%
 5. Coverage on parseHostKey > 80%
 6. Coverage on NewClient > 80%
+7. Coverage on Connect > 60% (via mock SSH server)
+8. Coverage on runCommand > 60% (via mock SSH server)
+9. Coverage on runCommandWithRetry > 60% (via mock SSH server)
 </success_criteria>
 
 <output>
