--- a/.planning/phases/20-test-coverage-expansion/20-04-PLAN.md
+++ b/.planning/phases/20-test-coverage-expansion/20-04-PLAN.md
@@ -54,9 +54,11 @@ Output: Expanded pkg/rds/commands_test.go with tests for command execution metho
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create testable SSH client wrapper for command execution tests</name>
+  <name>Task 1: Create testable SSH client wrapper with basic verification test</name>
   <files>pkg/rds/commands_test.go</files>
   <action>
+**Note:** This task creates test infrastructure for command-level testing. The actual SSH connection/command execution tests are covered in Plan 20-01 via mock SSH server. This infrastructure is for testing command construction, validation, and output parsing in isolation.
+
 The challenge: sshClient methods (CreateVolume, DeleteVolume, etc.) call runCommandWithRetry which requires an actual SSH connection. We need to test the command construction and response parsing logic.
 
 **Approach**: Create a testableSSHClient that wraps sshClient but allows injecting a mock runCommand function.
@@ -100,17 +102,55 @@ func newTestableSSHClient(runner mockCommandRunner) *testableSSHClient {
 }
 ```
 
-This allows testing command construction and parsing without actual SSH connections.
+**Add basic verification test to prove infrastructure works:**
+
+```go
+func TestTestableSSHClientInfrastructure(t *testing.T) {
+    // Verify the mock infrastructure works
+    expectedOutput := "mock output"
+    commandReceived := ""
+
+    runner := func(cmd string) (string, error) {
+        commandReceived = cmd
+        return expectedOutput, nil
+    }
+
+    client := newTestableSSHClient(runner)
+
+    // Test that mock runner is called
+    output, err := client.runCommand("test command")
+    if err != nil {
+        t.Errorf("Unexpected error: %v", err)
+    }
+    if output != expectedOutput {
+        t.Errorf("Expected output %q, got %q", expectedOutput, output)
+    }
+    if commandReceived != "test command" {
+        t.Errorf("Expected command %q, got %q", "test command", commandReceived)
+    }
+
+    // Test error propagation
+    errorRunner := func(cmd string) (string, error) {
+        return "", fmt.Errorf("mock error")
+    }
+    errorClient := newTestableSSHClient(errorRunner)
+    _, err = errorClient.runCommand("any")
+    if err == nil || !strings.Contains(err.Error(), "mock error") {
+        t.Errorf("Expected mock error to propagate")
+    }
+}
+```
   </action>
   <verify>
-Compile check:
 ```bash
-go build ./pkg/rds/...
+go test -v -run "TestTestableSSHClientInfrastructure" ./pkg/rds/...
 ```
+Test passes, proving mock infrastructure works correctly.
   </verify>
   <done>
 - testableSSHClient type created for testing
 - Mock runner injection allows testing command execution paths
+- Basic verification test proves infrastructure works
 - Code compiles without errors
   </done>
 </task>
