fix(21): revise plans based on checker feedback
Plan 21-03 Task 2:
- Clarify QUAL-01 was completed in Phase 19, not Phase 21
- Clarify QUAL-03 is deferred to v0.9.0, not a Phase 21 deliverable
- Update traceability table with correct phase attribution

Plan 21-04 Task 2:
- Correct success criteria to reflect only 3 Phase 21 deliverables
- Remove QUAL-01/QUAL-03 from Phase 21 requirements line
- Add 'Prior/Deferred Items' section documenting where these are handled

Root cause: Requirements/success criteria drift from planned scope

--- a/.planning/phases/21-code-quality-improvements/21-03-PLAN.md
+++ b/.planning/phases/21-code-quality-improvements/21-03-PLAN.md
@@ -127,42 +127,45 @@ Update the "Code Smells & Quality Issues" section in CONCERNS.md:
   <action>
 Update the Code Quality requirements section:
 
-1. Mark QUAL-01 as complete (error handling utilities - done in Phase 19):
+1. Mark QUAL-01 as complete - NOTE: This was completed in Phase 19, NOT Phase 21:
 ```markdown
 - [x] **QUAL-01**: Common error handling patterns extracted into reusable utilities
 ```
-Add note: "Completed in Phase 19 with sentinel errors and Wrap*Error helpers in pkg/utils/errors.go"
+Add note: "Completed in Phase 19 with sentinel errors and Wrap*Error helpers in pkg/utils/errors.go. Not a Phase 21 deliverable."
 
-2. Mark QUAL-02 as complete (severity mapping table):
+2. Mark QUAL-02 as complete (severity mapping table) - Phase 21 deliverable:
 ```markdown
 - [x] **QUAL-02**: Duplicated switch statements for severity mapping replaced with shared table
 ```
 Add note: "Completed in Phase 21-01 with severityMap in pkg/security/logger.go"
 
-3. Mark QUAL-03 as deferred (package refactoring):
+3. Mark QUAL-03 as deferred - NOTE: NOT a Phase 21 deliverable, deferred to v0.9.0:
 ```markdown
 - [~] **QUAL-03**: Large packages refactored for better separation of concerns
 ```
-Add note: "Deferred to v0.9.0 - packages functional, well-tested, refactoring risk > benefit"
+Add note: "Deferred to v0.9.0 - packages functional, well-tested, refactoring risk > benefit. Not a Phase 21 deliverable."
 
-4. Mark QUAL-04 as complete (code smell documentation):
+4. Mark QUAL-04 as complete (code smell documentation) - Phase 21 deliverable:
 ```markdown
 - [x] **QUAL-04**: Code smells from CONCERNS.md analysis resolved or explicitly documented as deferred
 ```
 Add note: "Completed in Phase 21-03 - all items have resolution status"
 
-5. Update traceability table for Phase 21:
+5. Update traceability table - clarify which phase actually implemented each requirement:
 ```markdown
-| QUAL-01 | Phase 19 (Phase 21) | Complete |
-| QUAL-02 | Phase 21 | Complete |
-| QUAL-03 | Phase 21 | Deferred |
-| QUAL-04 | Phase 21 | Complete |
+| QUAL-01 | Phase 19 | Complete | Error handling utilities |
+| QUAL-02 | Phase 21 | Complete | Severity table replacement |
+| QUAL-03 | v0.9.0 | Deferred | Package refactoring |
+| QUAL-04 | Phase 21 | Complete | Code smell documentation |
 ```
 
-6. Update coverage count to reflect partial completion.
+6. Update coverage count to reflect:
+   - Phase 21 delivers: QUAL-02, QUAL-04 (2 requirements)
+   - QUAL-01 was delivered in Phase 19
+   - QUAL-03 is deferred to v0.9.0
   </action>
   <verify>grep "QUAL-0" .planning/REQUIREMENTS.md shows all requirements with status markers</verify>
-  <done>REQUIREMENTS.md reflects accurate status of all QUAL requirements</done>
+  <done>REQUIREMENTS.md reflects accurate status of all QUAL requirements with correct phase attribution</done>
 </task>
 
 </tasks>
