--- a/.planning/phases/21-code-quality-improvements/21-04-PLAN.md
+++ b/.planning/phases/21-code-quality-improvements/21-04-PLAN.md
@@ -113,7 +113,7 @@ Update ROADMAP.md:
 - ✅ **v0.7.1 Code Quality and Logging Cleanup** - Phases 17-21 (shipped [DATE])
 ```
 
-2. Update Phase 21 section:
+2. Update Phase 21 section - CRITICAL: Correct success criteria to accurately reflect what Phase 21 delivers:
 ```markdown
 ### Phase 21: Code Quality Improvements
 
@@ -121,14 +121,16 @@ Update ROADMAP.md:
 
 **Depends on**: Phase 20
 
-**Requirements**: QUAL-01, QUAL-02, QUAL-03, QUAL-04
+**Requirements**: QUAL-02, QUAL-04 (QUAL-01 completed in Phase 19, QUAL-03 deferred to v0.9.0)
 
-**Success Criteria** (what must be TRUE):
-1. ✅ Common error handling patterns extracted into pkg/utils/errors.go
-2. ✅ Duplicated severity mapping switch statements replaced with shared table
-3. ~~ Large packages refactored for better separation of concerns (deferred v0.9.0)
-4. ✅ All code smells from CONCERNS.md either resolved or explicitly documented as deferred
-5. ✅ Codebase maintainability score improved (measured by golangci-lint complexity metrics)
+**Success Criteria** (what must be TRUE for Phase 21):
+1. ✅ Duplicated severity mapping switch statements replaced with shared table (QUAL-02)
+2. ✅ All code smells from CONCERNS.md either resolved or explicitly documented as deferred (QUAL-04)
+3. ✅ Codebase maintainability score improved (measured by golangci-lint complexity metrics)
+
+**Prior/Deferred Items** (NOT Phase 21 deliverables):
+- QUAL-01 (error handling utilities): Completed in Phase 19 with sentinel errors
+- QUAL-03 (package refactoring): Deferred to v0.9.0 - current structure functional and well-tested
 
 **Plans**: 4 plans
 
@@ -138,6 +140,11 @@ Plans:
 - [x] 21-03-PLAN.md — Update CONCERNS.md and REQUIREMENTS.md documentation
 - [x] 21-04-PLAN.md — Finalize phase and ship v0.7.1 milestone
 ```
+
+This corrects the requirements/success criteria mismatch by:
+- Removing QUAL-01 and QUAL-03 from Phase 21 requirements (they're handled elsewhere)
+- Listing only the 3 items Phase 21 actually delivers in Success Criteria
+- Adding explicit "Prior/Deferred Items" section to document where QUAL-01/QUAL-03 are handled
 
 3. Update Progress table:
 ```markdown
@@ -150,7 +157,7 @@ _Last updated: [DATE] (Phase 21 complete - v0.7.1 shipped)_
 ```
   </action>
   <verify>grep "21-01-PLAN.md.*\[x\]" .planning/ROADMAP.md shows plan marked complete</verify>
-  <done>ROADMAP.md updated with Phase 21 complete and v0.7.1 milestone shipped</done>
+  <done>ROADMAP.md updated with Phase 21 complete, success criteria corrected to reflect actual deliverables, and v0.7.1 milestone shipped</done>
 </task>
 
 <task type="auto">
