fix(25.2): revise plans based on checker feedback
- Add errcheck truth to Plan 01 must_haves (warning #4)
- Add errcheck verification step with fallback in Plan 01 Task 1 (blockers #1, #2)
- Add errcheck key_link to Plan 01 (blocker #2)
- Simplify Plan 02 Task 1: keep thresholds at 50, add comments only (warning #3)
- Remove out-of-scope test failure handling from Plan 02 Task 2 (warning #5)

--- a/.planning/phases/25.2-fix-linter-issues-blocking-ci-verification/25.2-01-PLAN.md
+++ b/.planning/phases/25.2-fix-linter-issues-blocking-ci-verification/25.2-01-PLAN.md
@@ -18,6 +18,7 @@ must_haves:
   truths:
     - "golangci-lint v2 config passes schema validation (golangci-lint config verify exits 0)"
     - "Linter settings (thresholds, exclusions) are applied correctly by golangci-lint v2"
+    - "errcheck exclusion for _test.go files suppresses all 63 test errcheck violations (0 errcheck issues in lint output)"
     - "All 8 staticcheck issues are resolved in source code"
     - "make lint reports 0 issues"
   artifacts:
@@ -37,6 +38,10 @@ must_haves:
       to: "golangci-lint v2 engine"
       via: "v2 config schema (version string, linters.settings, linters.exclusions)"
       pattern: 'version: "2"'
+    - from: ".golangci.yml linters.exclusions.rules"
+      to: "errcheck linter"
+      via: "test file exclusion rule suppresses 63 errcheck violations in _test.go"
+      pattern: "path.*_test\\.go.*errcheck"
 ---
 
 <objective>
@@ -88,12 +93,18 @@ Additionally, add `generated: lax` under `linters.exclusions` to skip generated 
 Remove the `run.timeout` field (v2 disables timeout by default).
 
 After writing the config, run `golangci-lint config verify` to confirm schema validation passes.
+
+**Critical: Verify errcheck exclusion works.** After config migration, explicitly confirm the errcheck exclusion for _test.go files is effective:
+1. Run `golangci-lint run --enable errcheck 2>&1 | grep -c errcheck` and confirm the count is 0 (or only non-test files).
+2. If errcheck violations still appear in _test.go files, the exclusion syntax is wrong. **Fallback:** Check the v2 exclusion format -- in v2, `linters.exclusions.rules` uses `path-except` / `path` with `linters: [errcheck]`. Try alternative syntax: `paths: ["_test\\.go"]` under the rule. If still failing, use `exclude-functions` to add specific test cleanup functions (os.RemoveAll, os.MkdirAll, os.Remove, os.Unsetenv) to the errcheck exclude-functions list as a last resort.
+3. Do not proceed to Task 2 until errcheck test violations are confirmed suppressed.
   </action>
   <verify>
 Run: `golangci-lint config verify` -- must exit 0 with no schema errors.
-Run: `make lint 2>&1 | tail -5` -- should show only staticcheck issues (no cyclop, gocyclo, or errcheck test violations).
+Run: `golangci-lint run 2>&1 | grep -c errcheck` -- must be 0 (errcheck exclusion for test files is working).
+Run: `make lint 2>&1 | tail -20` -- should show only staticcheck issues (no cyclop, gocyclo, or errcheck test violations).
   </verify>
-  <done>golangci-lint config verify passes, lint output shows only ~8 staticcheck issues (not 134)</done>
+  <done>golangci-lint config verify passes, errcheck exclusion confirmed working (0 errcheck violations in output), lint output shows only ~8 staticcheck issues (not 134)</done>
 </task>
 
 <task type="auto">
