--- a/.planning/phases/25.2-fix-linter-issues-blocking-ci-verification/25.2-02-PLAN.md
+++ b/.planning/phases/25.2-fix-linter-issues-blocking-ci-verification/25.2-02-PLAN.md
@@ -13,7 +13,7 @@ autonomous: true
 must_haves:
   truths:
     - "make verify passes without lint failures (exit code 0)"
-    - "Complexity thresholds are ratcheted down from 50 with documented justification"
+    - "Complexity thresholds at 50 have documented justification comments in .golangci.yml"
     - "CI/CD pipeline verification step would succeed with the updated config"
     - "No new linter issues introduced during fixes"
   artifacts:
@@ -31,11 +31,11 @@ must_haves:
 ---
 
 <objective>
-Ratchet down complexity thresholds from 50 to tighter justified values, run full `make verify`, and update project tracking.
+Document complexity threshold justification, run full `make verify`, and update project tracking.
 
-Purpose: The current thresholds of 50 for both gocyclo and cyclop are very lenient (inherited from initial setup). Now that the v2 config is fixed, we can tighten thresholds to catch future complexity regressions while still accepting the existing codebase. This completes the CI unblocking goal.
+Purpose: The current thresholds of 50 for both gocyclo and cyclop need documented justification (CSI driver complexity from spec compliance + Go error handling). This plan adds that documentation, runs the full CI-equivalent verification, and marks Phase 25.2 complete.
 
-Output: Tightened thresholds with justification, `make verify` passing, updated roadmap/state
+Output: Justified threshold comments in .golangci.yml, `make verify` passing, updated roadmap/state
 </objective>
 
 <execution_context>
@@ -57,37 +57,17 @@ Output: Tightened thresholds with justification, `make verify` passing, updated 
   <name>Task 1: Ratchet complexity thresholds with justification</name>
   <files>.golangci.yml</files>
   <action>
-Read the current `.golangci.yml` (updated by Plan 01). Update complexity thresholds to tighter values:
+Read the current `.golangci.yml` (updated by Plan 01). Keep complexity thresholds at 50 for both gocyclo and cyclop. Add YAML comments documenting the justification:
 
-**gocyclo:** Change `min-complexity: 50` to `min-complexity: 50`.
-Actually, check which functions currently exceed various thresholds by running `make lint` with different values. The goal is to find the tightest threshold that still passes.
+**What to add (comments only, no threshold changes):**
 
-The current highest-complexity functions (from research):
-- ControllerPublishVolume: 48
-- SecurityMetrics.RecordEvent: 44
-- TestOrphanReconciler_WithMockRDS: 41 (test)
-- TestControllerIntegrationWithMockRDS: 40 (test)
-- NodeStageVolume: 36
-- NewDriver: 33
-- main(): 31
+1. **gocyclo comment:** Threshold 50 is the current baseline. Highest function is ControllerPublishVolume (48). CSI RPC handlers have legitimate complexity from Go's explicit error handling + CSI spec compliance. Ratchet-down plan: refactor highest functions when touched next.
 
-Set gocyclo `min-complexity` to **50** (just above max of 48, catches new violations above this).
+2. **cyclop comment:** Threshold 50 matches gocyclo for consistency. Many functions (ControllerPublishVolume 48, RecordEvent 44, NodeStageVolume 36, NewDriver 33, main 31) are CSI/infrastructure code where complexity comes from spec requirements. Target: ratchet to 30 after refactoring ControllerPublishVolume.
 
-**cyclop:** The current max-complexity is 50. All 56 violations were from the broken config defaulting to 10.
+3. **Top offenders list:** Add a comment block listing the top 5 highest-complexity functions for future tracking.
 
-Check which production functions exceed threshold 15:
-- ControllerPublishVolume (48), RecordEvent (44), NodeStageVolume (36), NewDriver (33), main (31), NodeUnstageVolume (29), NodePublishVolume (26), CreateVolume (24), ControllerUnpublishVolume (23), Recover (22), parseVolumeInfo (20), formatLogMessage (17), Driver.Run (17)
-
-These are mostly CSI RPC handlers with legitimate complexity from Go's explicit error handling pattern. Set cyclop `max-complexity` to **50** to match gocyclo and document the justification.
-
-Add YAML comments explaining:
-1. Why thresholds are at 50 (CSI driver complexity from spec compliance + Go error handling)
-2. The ratchet-down plan (refactor highest functions when they're touched next)
-3. Which functions are the worst offenders (for future tracking)
-
-**Alternative approach:** If the current config from Plan 01 already has thresholds at 50 and passes, keep them and add justification comments only. The key goal is CI passing, not threshold optimization.
-
-Ensure the final config still passes `golangci-lint config verify` and `make lint`.
+Run `golangci-lint config verify` and `make lint` to confirm config is still valid and passes.
   </action>
   <verify>
 Run: `golangci-lint config verify` -- must exit 0
@@ -102,10 +82,7 @@ Run: `make lint` -- must exit 0 with 0 issues
   <action>
 1. Run `make verify` to confirm ALL verification checks pass (fmt + vet + lint + test). This is the CI-equivalent check.
 
-2. If `make verify` fails on any step other than lint:
-   - If `make fmt` fails: run `make fmt` to fix formatting
-   - If `make test` fails: check if failures are the pre-existing 14 test failures noted in STATE.md. If so, document but don't block.
-   - If lint fails: something broke -- investigate and fix.
+2. If lint fails: something broke -- investigate and fix before proceeding.
 
 3. Update `.planning/ROADMAP.md`:
    - Change Phase 25.2 plans from `TBD` to `2 plans`
@@ -136,7 +113,7 @@ Confirm ROADMAP.md and STATE.md are updated with Phase 25.2 completion
 
 <success_criteria>
 - `make verify` lint step exits 0
-- Complexity thresholds documented with justification for why they're at current levels
+- Complexity thresholds at 50 documented with justification comments in .golangci.yml
 - Phase 25.2 marked complete in project tracking
 - CI/CD pipeline would pass lint checks on this codebase
 </success_criteria>
