docs(28.1): address plan verification warnings
Fixed 3 warnings from gsd-plan-checker:

1. Test regex pattern: Changed verify command from
   `-run "NVMeConnect|NVMeDisconnect|..."` to `-run "NVMe"` to match
   all NVMe-related tests including new TestNVMeConnectionsActive_*
   test functions.

2. Integration test clarification: Updated ROADMAP Success Criteria #5
   to clarify that TestNVMeConnectionsActive_SurvivesRestart unit test
   satisfies the restart validation requirement (simulates controller
   restart via new Metrics instance).

3. Terminology ambiguity: Clarified that metric counts volumes (not
   per-node attachments during migration dual-attach):
   - Updated GaugeFunc Help text
   - Added NOTE comment in driver.go wiring code
   - Updated ROADMAP Success Criteria #1
   - Added success criteria #9 and #10 documenting restart and
     dual-attach behavior

Changes ensure plan is unambiguous and executable without confusion.

--- a/.planning/phases/28.1-fix-rds-csi-nvme-connections-active-metric-accuracy/28.1-01-PLAN.md
+++ b/.planning/phases/28.1-fix-rds-csi-nvme-connections-active-metric-accuracy/28.1-01-PLAN.md
@@ -107,7 +107,7 @@ func (m *Metrics) SetAttachmentManager(countFunc func() int) {
         prometheus.GaugeOpts{
             Namespace: namespace,
             Name:      "nvme_connections_active",
-            Help:      "Number of currently active NVMe/TCP connections (from attachment manager state)",
+            Help:      "Number of active volumes with NVMe/TCP connections (counts volumes, not per-node attachments during migration)",
         },
         func() float64 {
             if m.attachmentCountFunc == nil {
@@ -158,6 +158,10 @@ In `pkg/driver/driver.go`:
 // Wire AttachmentManager into Metrics for nvme_connections_active gauge.
 // GaugeFunc callback queries current attachment count on each Prometheus scrape,
 // surviving controller restarts (attachment state rebuilt from VolumeAttachments).
+//
+// NOTE: This counts volumes (len(attachments)), not per-node attachments.
+// During live migration with dual-attach, a volume attached to 2 nodes temporarily
+// is counted as 1, not 2. This matches the VolumeAttachment count in the cluster.
 config.Metrics.SetAttachmentManager(func() int {
     return len(driver.attachmentManager.ListAttachments())
 })
@@ -381,7 +385,7 @@ func TestNVMeConnectionsActive_DynamicUpdates(t *testing.T) {
 IMPORTANT: Add SetAttachmentManager to this test to ensure nvme_connections_active is included in namespace validation.
   </action>
   <verify>
-Run `make test` and verify all tests pass. Run `go test -v ./pkg/observability/... -run "NVMeConnect|NVMeDisconnect|NVMeConnectionsActive|MetricsNamespace"` to specifically check the updated/new tests.
+Run `make test` and verify all tests pass. Run `go test -v ./pkg/observability/... -run "NVMe"` to specifically check all NVMe-related tests including the new TestNVMeConnectionsActive_* tests.
   </verify>
   <done>
 All existing tests updated to use SetAttachmentManager pattern instead of Inc/Dec pattern. 4 new tests added: QueriesAttachmentManager (verifies metric absent without SetAttachmentManager, present with it), SurvivesRestart (new Metrics instance shows correct count), DynamicUpdates (count changes reflected in real-time), and scrapeMetrics helper. All tests pass.
@@ -408,6 +412,8 @@ All existing tests updated to use SetAttachmentManager pattern instead of Inc/De
 6. Driver.go wires AttachmentManager into Metrics during initialization
 7. All unit tests pass including new restart-survival and dynamic-update tests
 8. No import cycle between observability and attachment packages (func() int callback pattern)
+9. Restart scenario validated: TestNVMeConnectionsActive_SurvivesRestart simulates controller restart (new Metrics instance + SetAttachmentManager = correct count from rebuilt state)
+10. Dual-attach behavior documented: Metric counts volumes (not per-node attachments), so migration dual-attach doesn't inflate count
 </success_criteria>
 
 <output>
